# vendorless

./: .gitignore  404.html  Dockerfile  README.MD  README.md  entrypoint.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: gh-package.yaml  gh-pages.yaml  pypi.yaml  pytest.yaml
api/: index.html
blueprints/: index.html
creating-packages/: index.html
docs/: blueprints.md  creating-packages.md  level1.md  level2.md  level3.md  rendering-blueprints.md  service-templates.md
level3/: index.html
networks/: index.html
rendering-blueprints/: index.html
search/: search_index.json
src/vendorless/: cli.py  param.py
src/vendorless/core/: __init__.py  blueprints.py  cli.py  commands.py  core.py  dotdict.py  mypy_plugin.py  param.py  param.pyi  parameters.py  params.py  scratch.py  service.py  service_template.py  testing.py  utils.py  volume.py
src/vendorless/core/templates/: docker-compose.yaml
src/vendorless/core/templates/module/{{cookiecutter.name}}/: pyproject.toml
src/vendorless/core/templates/package/: cookiecutter.json
src/vendorless/core/templates/package/vendorless-{{cookiecutter.name}}/: pyproject.toml
src/vendorless/core/templates/package/{{cookiecutter.name}}/: mkdocs.yml
src/vendorless/core/templates/package/{{cookiecutter.name}}/.github/workflows/: gh-pages.yaml
src/vendorless/templates/module/{{cookiecutter.name}}/: pyproject.toml
tests/: test_blueprints.py  test_dotdict.py  test_parameters.py  test_service.py  test_service_templates.py
volumes/: index.html
