[project]
name = "vendorless-{{ cookiecutter.name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    {name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.email }}"}
]
license = {text = "{{ cookiecutter.license }}"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "vendorless/{{ cookiecutter.name }}", from = "src" },
]
include = [
    "vendorless/{{ cookiecutter.name }}/templates",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
